edits from comments

--- a/src/collections/proof-of-existence/20.md
+++ b/src/collections/proof-of-existence/20.md
@@ -3,7 +3,7 @@ title: "Field Exercise (4)"
 arc: 3
 chapter: 20
 tags: ["veric", "roxana"]
-lastEdit: 2025-07-20
+lastEdit: 2025-07-25
 pubDate: 2025-07-19
 authorsNotes: <p>We've finally hit the action! I'm very excited for the rest of this arc.</p> <p>One thing I really liked about writing this chapter is that you can feel the shape of the life our protagonist must have lived, especially based on his response to danger. It's fun to think about the person he is because of and in spite of the world he was in. What do you think?</p> <p>This chapter went through some serious reconstruction under the editor's axe, so if you see any dangling sentences or mistakes, feel free to let me know</p>
 ---
@@ -105,7 +105,7 @@ Better safe than sorry, right?
 
 Now to take care of what I actually wanted to do. 
 
-I wandered around until I found a fence that let me climb to the roof of a nearby ouse. I went to the side that was facing the sun, dangled myself down from the edge of the roof, and dismissed `[Honest Man’s Deception]`.
+I wandered around until I found a fence that let me climb to the roof of a nearby house. I went to the side that was facing the sun, dangled myself down from the edge of the roof, and dismissed `[Honest Man’s Deception]`.
 
 My vision went dark. New and foreign senses sparked to life in return. I spread my wings out to bask under the sunlight.
 
@@ -217,7 +217,7 @@ That couldn’t be anything good, right?
 
 I turned onto a quieter street and climbed up onto a closed shop front’s overhang to wait. 
 
-The tall man holding the compass led his taller companion past me, then came to a stop. “Wait, the needle swung around,” he said, backtracking to the shop. “Is it in here…?” 
+The tall man holding the compass led his shorter companion past me, then came to a stop. “Wait, the needle swung around,” he said, backtracking to the shop. “Is it in here…?” 
 
 “Why would it be in there?” the short man said, baffled.
 
@@ -271,7 +271,7 @@ One of the daffodil’s shining golden petals withered and fell, turning into gr
 
 “Ahaha. Yeah. Not true,” my tall friend said with an awkward smile, reaching into his coat pocket. I didn’t raise my knife. He took out a few green sticks of incense and a bronze incense burner. “You must have been stressed. Here, this will help us all relax.” 
 
-Wow, how considerate. I watched him light the incense with a match. A pleasantly woody smoke intertwined with the daffodil’s sweet fragrance in the air. 
+Wow, how considerate. I watched him light the incense with a match. A pleasantly woody smoke intertwined with the daffodil’s sweet fragrance in the air. All the smoke in my face was unpleasant, though, so I released him and let him back away out of grabbing range.
 
 “Say, friend,” my short friend said. “What identity did you get when you entered the Fantasm World?” 
 
@@ -293,7 +293,7 @@ Why didn’t I know their names, either?
 
 My tall friend glanced at my clothes and answered easily, “Of course. You’re Acacius Duval.”  
 
-So he wasn’t my friend. I shouldn’t trust him. 
+So he wasn’t *my* friend. I shouldn’t trust him. 
 
 Another of the daffodil’s petals rotted away. 
 
@@ -341,7 +341,7 @@ I nodded and yawned again.
 
 I just needed to figure out one thing first. 
 
-Why was that incense putting me to sleep, anyways? Could it be that since they were plotting against Nithemoore students, they were they going to target me, too?
+Why was that incense putting me to sleep, anyways? Could it be that since they were plotting against Nithemoore students, they were going to target me, too?
 
 As I struggled to keep my eyes open, I saw one more petal turn to rotten ash, leaving only a single lonely petal hanging on that flower. 
 
