--- a/src/collections/proof-of-existence/23.md
+++ b/src/collections/proof-of-existence/23.md
@@ -284,7 +284,7 @@ The mage screamed, and the transformed paper dolls simultaneously collapsed. Ver
 
 She saw— 
 
-Acacius appearing behind a masked ritualists like a vengeful ghost. His eyes shone madly as he drew a black knife across the ritualist’s throat. The body gurgled and fell to the ground. Acacius didn’t spare it a second glance. He coiled like a wildcat, gripping his knife tightly, and leaped forward at the mage. 
+Acacius appearing behind a masked ritualist like a vengeful ghost. His eyes shone madly as he drew a black knife across the ritualist’s throat. The body gurgled and fell to the ground. Acacius didn’t spare it a second glance. He coiled like a wildcat, gripping his knife tightly, and leaped forward at the mage. 
 
 “Look out!” Veric shouted hoarsely. 
 
