--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -3,7 +3,7 @@ title: "Unexpected Guest (1)"
 arc: 1
 chapter: 1
 tags: ["acacius"]
-lastEdit: 2025-04-04
+lastEdit: 2025-08-14
 pubDate: 2025-03-27
 ---
 In my dreams, everything was burning. 
@@ -197,7 +197,7 @@ Fine then. I flipped the Record to the next page.
 > **Description:** The crystallization of a certain human’s unforgiving resolve to remain “himself,” even if it meant giving up everything else. 
 > 
 > **Skill:** As well as allowing the user to take the appearance of a target, this World Proof can also take the form and imitate the skill of that target’s World Proof. The skill imitation grows closer in power to the original skill according to the user’s understanding of the target. 
-> - To take the target’s appearance, the user must know their name, and to imitate their World Proof, the user must know its name.
+> - To take the target’s appearance, the user must know their name, and to imitate their World Proof, the user must additionally know its name.
 > - The skill will be forcefully dispersed when the user lies. 
 
 I felt rather helpless. Was this “World Proof” truly a representation of how Kosmonymia thought of me? Sure, the skill seemed useful, but this description really made me seem like some kind of shady liar, or at least someone who was a bit off in the head. 
