--- a/src/collections/proof-of-existence/22.md
+++ b/src/collections/proof-of-existence/22.md
@@ -3,7 +3,7 @@ title: "Field Exercise (6)"
 arc: 3
 chapter: 22
 tags: ["veric", "roxana", "nastaran", "luka", "professor raoul"]
-lastEdit: 2025-08-02
+lastEdit: 2025-08-14
 pubDate: 2025-08-02
 authorsNotes: <p>This concludes arc 3.1 and the next chapter will be an interlude POV chapter. Hope to see you there!</p> <p>Yet another early update today since I'm busy this weekend again. I'm afraid I've been suffering from the witch's curse. Replies to comments to come</p> 
 ---
@@ -65,7 +65,7 @@ Still, it was always easier to break something than to make it.
 
 Whoever was manipulating the barrier, they weren’t in my current line of sight, so I openly approached, squinting against the wind cutting into my skin. I reached out and grabbed ahold of my net. 
 
-I felt the shape of someone else’s awareness touching mine, spread out through the next. Through that echo, I felt surprise, and then a bloody killing intent that surged out through the woven construct. A wave of red light rippled across the net. 
+I felt the shape of someone else’s awareness touching mine, spread out through the net. Through that echo, I felt surprise, and then a bloody killing intent that surged out through the woven construct. A wave of red light rippled across the net. 
 
 Clearly it was a bad idea to let that touch me, but if I retreated, the enemy would gain momentum. With my ignorance, how would I get an advantage after that? This was a critical moment. 
 
