--- a/src/collections/proof-of-existence/23.md
+++ b/src/collections/proof-of-existence/23.md
@@ -3,7 +3,7 @@ title: "False Priestess' Record (1)"
 arc: 3
 chapter: 23
 tags: ["veric"]
-lastEdit: 2025-08-09
+lastEdit: 2025-08-14
 pubDate: 2025-08-09
 authorsNotes: <p>Veric is one of my favorite characters. I enjoyed this chapter for providing more context on what other people's titles and World Proofs can be like, and also just showcasing Veric's character in general. Now that we've had a few chapters to get to know her, what's your impression of her?</p> <p>Will be replying to comments today. Thanks for all your support these past few weeks!</p>
 ---
@@ -96,9 +96,7 @@ The enemy beneath her didn’t miss his chance.
 
 An impact to the stomach knocked all the wind out of her. She rolled her eyes down and saw the golden blade buried in her stomach. With a strained roar, the man beneath her ripped the blade to the side, spilling her blood and guts all over his upper body, staining his mask black and red. 
 
-If she relied on `[Braveheart]`’s miracle to stay alive, in this position, they could easily kill her over and over again until she gave up. 
-
-But if she backed down from the challenge and faked her death, `[Braveheart]` would stop working, and she really would die. 
+If she relied on `[Braveheart]`’s miracle to stay alive, in this position, they could easily kill her over and over again until she gave up. But if she backed down from the challenge and faked her death, `[Braveheart]` would stop working, and she really would die. 
 
 The memory of a woman with fluttering white hair flitted through her mind. 
 
@@ -106,7 +104,9 @@ The memory of a woman with fluttering white hair flitted through her mind.
 
 Veric should have learned more from Sacha when she had the chance. 
 
-Called forth by her regret, her World Proof began to manifest. 
+If her abilities had been different — no, if she had just been a different person entirely… 
+
+In the midst of her overwhelming regret, her World Proof began to manifest. 
 
 The air darkened, and a great pressure descended. Time slowed to a stop, and everything froze in place, like insects trapped in amber, flowers preserved in glass. Her consciousness was pulled into another space. 
 
@@ -116,7 +116,7 @@ One plate represented her healing abilities; another, her barrier and formation 
 
 But the power source of her defensive skills was the Great Dragon, and right now, the Great Dragon couldn’t protect her from that golden blade. 
 
-Veric reached for the title tattooed on her collarbone.
+Veric reached for the title symbol tattooed on her collarbone.
 
 `[Arbiter of Solace and Relief]`.
 
@@ -142,7 +142,7 @@ The world began moving again, and Veric’s body sang with the sensation of bein
 
 `[Braveheart]`’s power burst out. Veric’s fingers dug into the arms around her neck. The dragon phantom’s claws gouged deep into flesh and crushed bone. When she pulled her hands away, strips of skin and muscle dangled from her hands. The woman screamed and fell away. 
 
-The man stabbed at her again, aiming for the arteries in her thights, but she caught the blade with her hand, heedless of the blood. With her free hand, she gathered her guts back inside her stomach, where an intense blue light knit her flesh back together in a thick and pale scar. 
+The man stabbed at her again, aiming for the arteries in her thighs, but she caught the blade with her hand, heedless of the blood. With her free hand, she gathered her guts back inside her stomach, where an intense blue light knit her flesh back together in a thick and pale scar. 
 
 Veric was still afraid. 
 
