ch24 edits, ch25 update

--- a/src/collections/proof-of-existence/24.md
+++ b/src/collections/proof-of-existence/24.md
@@ -3,7 +3,7 @@ title: "Survival Exercise (1)"
 arc: 3
 chapter: 24
 tags: ["veric", "luka"]
-lastEdit: 2025-08-16
+lastEdit: 2025-08-23
 pubDate: 2025-08-16
 authorsNotes: <p>Welcome back Luka, promoted from being the Damocles' sword over our main character's head to being the problem right next to him. Which is exactly what he wants on top of all his other problems. :)</p> <p>Luka was designed as a "webnovel protagonist" type character. What do you think of him?</p>
 ---
@@ -12,7 +12,7 @@ Hah, fuuuck. I was so screwed…
 
 Was it my fault for letting my guard down? I’d known that Kosmonymia had its dangers, but I should’ve been more cautious! Of course a world as idyllic as this couldn’t come without a cost… 
 
-If there wasn’t magic involved, maybe I could have dealt with it better, but I was really out of my depth now. If I got out of this place, it was time to start keeping a journal again. I needed some stress management to make sure I didn’t lose it.  
+If there wasn’t magic involved, maybe I could have dealt with it better, but I was really out of my depth now. If I got out of this place, it was time to start keeping a journal again. I needed some stress management to make sure I didn’t lose it completely.  
 
 Despite my best efforts, the temporary power boost I’d bargained from `[Devourer]` was wearing off. Maybe Verica felt me lagging behind, because she held onto my wrist and dragged me up through the dark water towards the surface. 
 
@@ -188,7 +188,7 @@ If I got out of this situation, reading up on the Great Dragon and the hierarchs
 
 “You’ve grasped the concept quickly.” 
 
-“What’s with is with your attitude? Maybe I should question you after all.” 
+“What’s with your attitude? Maybe I should question you after all.” 
 
 “How easily you can reach the limits of your principles,” I teased. 
 
@@ -346,9 +346,9 @@ Luka tilted his head.
 
 Luka didn’t move for a long, long moment. The shadows crept closer to Verica, scraping their teeth down her strings.
 
-But slowly, agonizingly, the darkness receded. It condensed into a stream of fog that slipped up under his sleeves. It settling on his skin in a black tattoo that slithered away out of sight before I could make it out clearly.
+But slowly, agonizingly, the darkness receded. It condensed into a stream of fog that slipped up under his sleeves. It settled on his skin in a black tattoo that slithered away out of sight before I could make it out clearly.
 
-Luka closed his eyes and breathed in deeply. When he opened them again, he seemed much calmer and approachable, and the strings had disappeared from his vision. 
+Luka closed his eyes and breathed in deeply. When he opened them again, he seemed much calmer and more approachable, and the strings had disappeared from his vision. 
 
 “…Thanks, Veric. It’s good to see you.” 
 
