--- a/src/collections/proof-of-existence/25.md
+++ b/src/collections/proof-of-existence/25.md
@@ -3,7 +3,7 @@ title: "Survival Exercise (2)"
 arc: 3
 chapter: 25
 tags: ["veric", "luka"]
-lastEdit: 2025-08-23
+lastEdit: 2025-08-26
 pubDate: 2025-08-23
 authorsNotes: <p>Finished moving, finally got to sit down and update. Thanks for the patience everyone, hope you enjoy the chapter.</p> <p>Lots of new information this chapter! Let me know your thoughts.</p>
 ---
@@ -302,7 +302,7 @@ Fortunately, my sight was still good enough to make out the fuzzy outlines of th
 
 Luka and Verica talked with each other quietly for a few minutes, too far away to make their words out clearly. Then Luka came and joined me, but Verica didn’t get any further than hovering uncomfortably around us as we searched. 
 
-In the end, Luka and I turned up a few more net amulets and spare weapons. Neither Luka or Verica knew what framework the amulets represented or how to use them, so I pocketed them for myself. 
+In the end, Luka and I turned up a few more net amulets and spare weapons. Neither Luka or Verica knew what framework the amulets represented or how to use them, and even when I attempted to demonstrate it, they couldn’t see the ribbons. In the end, I pocketed them for myself. 
 
 We also removed the masks, but it only revealed unfamiliar faces. “Maybe they’re from the other research group that was being hosted here,” I mused. “Disguising themselves as guests should be easier than infiltrating unnoticed altogether, right?” 
 
