--- a/src/collections/proof-of-existence/27.md
+++ b/src/collections/proof-of-existence/27.md
@@ -3,7 +3,7 @@ title: "Survival Exercise (4)"
 arc: 3
 chapter: 27
 tags: ["veric", "luka", "nastaran", "roxana"]
-lastEdit: 2025-09-07
+lastEdit: 2025-09-08
 pubDate: 2025-09-07
 authorsNotes: <p>Day late update due to laptop dying. Thanks for your patience. Will do my best to catch up with comments this weekend.</p>
 ---
@@ -131,7 +131,7 @@ Veric quietly scoffed at her words.
 
 She looked at me like I was a bug. Ha ha. “Luka, as Veric’s ‘best friend,’ shouldn’t you object to this as well?” 
 
-It would have been simplest to just ask Veric, but Veric wasn’t saying anything either. She gave Luka a questioning look, atwhich he glanced at me and said, “Stop teasing her, Acacius.” 
+It would have been simplest to just ask Veric, but Veric wasn’t saying anything either. She gave Luka a questioning look, at which he glanced at me and said, “Stop teasing her, Acacius.” 
 
 How did he know? “Do you think I’m joking?” 
 
@@ -321,7 +321,7 @@ The pressure around us dissipated. I dropped the sunglasses back down and pulled
 
 We hurtled past the bodies, past the dolls, and down the passageway. Our feet splashed in the mud and shallow water, trampling on the stems of glowing flowers and the wings of butterflies as we went. 
 
-When the tunnel opened up on another wide cavern, Luka threw the compass to Veric. She caught it in one hand, grabbed my warm with the other, and jumped down into the water. Two splashes sounded as the other two followed. Veric glanced at the compass and swam confidently through the dark water, pulling me past obstacles I couldn’t see clearly even through her eyes. She squeezed us through a narrow series of flooded tunnels before bringing us back to the surface of the water. 
+When the tunnel opened up on another wide cavern, Luka threw the compass to Veric. She caught it in one hand, grabbed my arm with the other, and jumped down into the water. Two splashes sounded as the other two followed. Veric glanced at the compass and swam confidently through the dark water, pulling me past obstacles I couldn’t see clearly even through her eyes. She squeezed us through a narrow series of flooded tunnels before bringing us back to the surface of the water. 
 
 I pulled myself onto the bank and made a half-hearted attempt at squeezing the water out my hair. Luka shook himself like a dog and checked his sword. Veric and Roxana, those lucky bastards, were dry as bone. Should I try being a Dragon Priestess too? 
 
