ch28 typo fix; ch29 update

--- a/src/collections/proof-of-existence/28.md
+++ b/src/collections/proof-of-existence/28.md
@@ -128,7 +128,7 @@ A strong force hit the taut wires still pulling on me, digging into my wounds. I
 
 Then, swift as an eel, she dove into the chaotic currents. 
 
-Without someone looking at me, I could only rely on the sacrificial flow frame to read my surroundings. I swam for the surface and nudged the nearby ribbons to push me towards the riverbank. Then I felt around for a rock formation and held onto for dear life. 
+Without someone looking at me, I could only rely on the sacrificial flow frame to read my surroundings. I swam for the surface and nudged the nearby ribbons to push me towards the riverbank. Then I felt around for a rock formation and held on for dear life. 
 
 Once I was safely anchored, I focused back on the flow ribbons around me. The water was subsiding back into the riverbed. I located Veric’s underwater fight via her perspective and sent energy to the water-flow ribbons near her, manipulating them to hinder her opponents’ movements. 
 
@@ -205,10 +205,12 @@ Beneath his portrait, the card read:
 > RAOUL SATTARI ∙ CRUCIBLE OF KATSOULI
 > 
 > SKILL ∙ `[Lotus of the Betrayed]`   
-> ◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾
+> ◾◾◾◾◾◾◾◾◾◾
+> ◾◾◾◾◾◾◾◾◾◾
 > 
 > TALENT ∙ `[Broken Faith, Unbroken Love]`  
-> ◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾◾
+> ◾◾◾◾◾◾◾◾◾◾
+> ◾◾◾◾◾◾◾◾◾◾
 
 Judging by the ensuing silence, this was pretty bad. 
 
@@ -292,7 +294,7 @@ I didn’t feel great either, but something had to be done before morale could f
 
 “What’s the plan after this?” Luka said. 
 
-I shrugged half-heartedly. “Kill as many members of the Order we can before the fourth day arrives?”
+I shrugged half-heartedly. “Kill as many members of the Order as we can before the fourth day arrives?”
 
 Otherwise, once the “visual disaster” struck, we’d have too many hidden threats pointing at our backs. 
 
@@ -300,7 +302,7 @@ Otherwise, once the “visual disaster” struck, we’d have too many hidden th
 
 “I can keep watch for the first shift,” said Veric. “Acacius, Luka, why don’t you get some rest first?” 
 
-Luka nodded his assent and leaned against the cave wall, propping his sword up within a moment’s grasp. He closed his eyes easily. How envious. 
+Luka nodded his assent and leaned against the cave wall, propping his sword up within a moment’s grasp. He closed his eyes easily. How enviable. 
 
 However, I declined. 
 
