ch29 spelling edits, ch30 publication

--- a/src/collections/proof-of-existence/29.md
+++ b/src/collections/proof-of-existence/29.md
@@ -3,7 +3,7 @@ title: "Survival Exercise (6)"
 arc: 3
 chapter: 29
 tags: ["veric", "luka", "roxana", "hanan"]
-lastEdit: 2025-09-20
+lastEdit: 2025-09-27
 pubDate: 2025-09-20
 authorsNotes: <p>This concludes arc 3.2; hope you're all ready for the conclusion in arc 3.3!</p> <p>Lots of characterization that I enjoyed writing this chapter; did you have a favorite? Anything that stuck out to you as intriguing or odd?</p>
 ---
@@ -13,6 +13,8 @@ I dreamed I was standing on the mountainside, overlooking the shining towers of 
 Veric was sitting on a rock, hugging her knees to her chest. Her face was haggard. Luka sat next to her, covered in blood and missing an arm. His remaining hand was withered and blackened like dead wood, curled stiffly around the hilt of his sword. Roxana was pallid and unconscious. 
 
 And Acacius’ body — my body — was carefully laid out in the grass, covered loosely by Veric’s outer robe. The chest wasn’t moving, and the skin had blotted bruise-purple near the ground, where the stagnant blood must have pooled. 
+
+With just one look, I knew.
 
 I was dead. 
 
@@ -60,7 +62,7 @@ When they reached the beach, the wave patterns were already becoming disordered,
 
 Eerie hisses and crackles echoed through the water, accompanied by a faint roar that grew in a crescendo. Soon, a large shadow rippled over the ocean floor, heading towards the shore. 
 
-“That’s the wave passing overhead.” Veric rubbed her eyes again. “There will be rubble and debris washing this way soon. Once that passes, se just need to hold out down here for the next three days.” 
+“That’s the wave passing overhead.” Veric rubbed her eyes again. “There will be rubble and debris washing this way soon. Once that passes, we just need to hold out down here for the next three days.” 
 
 Luka grabbed her by the shoulder. 
 
@@ -170,7 +172,7 @@ This was starting to feel dangerous. “Veric—”
 
 “Stop,” I said sharply. “Those things you thought about me before — being ruthless, killing others — it’s all true. Don’t go painting me in a rosy light just because our goals happen to align.” 
 
-“And that’s the other thing,” Veric said. “For such a schemer, you draw such a strange line between yourself and others. Why do you not want us trust you? Why do you insist on the most pessimistic, utilitarian interpretation of your actions? It’s not advantageous to you at all. I don’t think these are the actions of someone who is cruel to others. Just someone who won’t let them close.” 
+“And that’s the other thing,” Veric said. “For such a schemer, you draw such a strange line between yourself and others. Why do you not want us to trust you? Why do you insist on the most pessimistic, utilitarian interpretation of your actions? It’s not advantageous to you at all. I don’t think these are the actions of someone who is cruel to others. Just someone who won’t let them close.” 
 
 I was momentarily speechless. Was there actually something wrong with her? How the hell did she get this far in life by thinking about useless stuff like this?
 
