ch30 typo fixes, ch31 publication

--- a/src/collections/proof-of-existence/30.md
+++ b/src/collections/proof-of-existence/30.md
@@ -3,7 +3,7 @@ title: "Trust Exercise (1)"
 arc: 3
 chapter: 30
 tags: ["veric", "luka", "roxana", "hanan", "ozias"]
-lastEdit: 2025-09-27
+lastEdit: 2025-10-04
 pubDate: 2025-09-27
 authorsNotes: <p>You know, due to how much effort I've put into explaining various rules of this world, I think it often gives the mistaken impression that this is a "hard magic" world. However this is, in fact, more of a "soft magic" world. Many things are possible as long as they adhere to the Tripartite's basic rules.</p> <p>In any case, we'll get to see powers outside the relatively safe and systematic structure of a school. What do you think of the powers we've seen this chapter? Notice any connections?</p> <p>As always, thanks for reading, and I hope to see you next week!</p>
 ---
@@ -28,7 +28,7 @@ Once I finished writing, I folded the paper and held it out to Veric.
 
 “Also, you can keep it dry while moving underwater. Unlike me.” 
 
-Veric finally stopped arguing me and reached out to take it. 
+Veric finally stopped arguing with me and reached out to take it. 
 
 I took the opportunity to lean in and whisper. 
 
