--- a/src/collections/proof-of-existence/31.md
+++ b/src/collections/proof-of-existence/31.md
@@ -5,7 +5,7 @@ chapter: 30
 tags: ["veric", "luka", "roxana", "hanan", "ozias"]
 lastEdit: 2025-10-04
 pubDate: 2025-10-04
-authorsNotes: <p>I didn't think it was worth it to interrupt the flow of the story to explain this, but Ozias' "parallel calculation" isn't a capital S Skill, just <i>a</i> skill. With it sealed he can't do any crazy complicated multi-tasking with his beads. But he can still do other stuff. As for how Hanan's sealing skill works, it's not one that works by sealing the exact same skill in both parties... It has a different price. Anyways, maybe a careful reader can guess what exactly that skill is?</p> <p>We met a donation milestone, so an extra chapter will be going up on Wednesday. Thank you to everyone for your generosity & support!</p>
+authorsNotes: <p>I didn't think it was worth it to interrupt the flow of the story to explain this, but Ozias' "parallel calculation" isn't a capital S Skill, just <i>a</i> skill. With it sealed he can't do any crazy complicated multi-tasking with his beads. But he can still do other stuff. As for how Hanan's sealing skill works, it's not one that works by sealing the exact same skill in both parties... It has a different price. Anyways, maybe a careful reader can guess what exactly that skill is?</p> <p>We met a donation milestone, so an extra chapter will be going up on Wednesday. I've also caught up with comments on the last two chapters. Thank you to everyone for your generosity & support!</p>
 ---
 
 First, I oriented and aimed myself for Hanan’s field of vision. 
@@ -95,6 +95,8 @@ After a moment of thought, I accepted them.
 We were allies working towards a common goal, after all. 
 
 But what could I do to influence the current fight? 
+
+I wanted to escape the fight entirely, but if Hanan had to stay in proximity to use her sealing skill, then we might be in trouble if we escaped out of range and all his abilities came back. Plus, who knew if Ozias had some kind of tracking skill? He’d managed to find us, after all. As long as we had Hanan’s sealing, maybe it would be best to take advantage of it and deal with the threat once and for all?
 
 Luka and Veric were holding up for now, but I had a feeling it wouldn’t last. 
 
