--- a/src/collections/proof-of-existence/32.md
+++ b/src/collections/proof-of-existence/32.md
@@ -570,7 +570,7 @@ The compass, the net amulet, and Hanan’s pen fell out.
 
 “Take off your other artifacts,” she said.  
 
-I deliberately hesitate, but finally, with an unwilling mien, I pulled my necklaces off. The 6E and aura force artifacts fell to the ground along with Isul’s amulet. The flames on my knife went out. I pressed `[Caller]` harder underneath one eye. 
+I deliberately hesitated, but finally, with an unwilling mien, I pulled my necklaces off. The 6E and aura force artifacts fell to the ground along with Isul’s amulet. The flames on my knife went out. I pressed `[Caller]` harder underneath one eye. 
 
 Hanan nodded, flicking a card out from her deck. It sailed in front of me and transformed into a small black door with a groove in it. 
 
