--- a/src/collections/proof-of-existence/33.md
+++ b/src/collections/proof-of-existence/33.md
@@ -513,7 +513,7 @@ I moved my eyes to stare at her and spoke calmly.
 
 “What kind of question is that?”
 
-“I don’t either. So that’s why I do my best to keep my number of enemies at zero.” 
+“I don’t either. So that’s why I do my best to keep my number of enemies at *zero.”*
 
 I narrowed my eyes. 
 
