--- a/src/collections/proof-of-existence/34.md
+++ b/src/collections/proof-of-existence/34.md
@@ -18,7 +18,7 @@ To understand the stars, he studied people. And to understand people, he studied
 
 His pursuit of those stories led him to the man he accepted as his master and to his fellow disciples. It led him across kingdoms and continents, and to the woman he thought he would love until the end of his days. 
 
-Now, his master was dead, his fellow disciples gone. That woman still loved him, but she would always be his jailer first. The Sattari name weighed on him heavier than any chain, and Katsouli’s legacy marked him like an iron brand. 
+Now, his master was executed, his fellow disciples dead. That woman still loved him, but she would always be his jailer first. The Sattari name weighed on him heavier than any chain, and Katsouli’s legacy marked him like an iron brand. 
 
 He was all but imprisoned in Iyiria, finding refuge only in the Academy, and he would never again have the freedom to wander the world to gaze at the stars above. 
 
