--- a/src/collections/proof-of-existence/34.md
+++ b/src/collections/proof-of-existence/34.md
@@ -156,7 +156,7 @@ As he watched, the blood that pooled out began to flake away in scraps of white 
 
 Tiziri was wanted by far too many people. It would be stranger if she didn’t have a few last tricks up her sleeve. 
 
-For years, Tiziri had been like his personal Damocles’ blade. He didn’t know where she was, or when she would choose to return, or how she would overturn his life if she did. He made plans and precautions, of course, but he was limited in scope. The contract he’d made with her in his youth prevented him from hurting her, and with her at a higher realm than him, it meant he could not effectively oppose her. 
+For years, Tiziri had been like his personal Sword of Damocles. He didn’t know where she was, or when she would choose to return, or how she would overturn his life if she did. He made plans and precautions, of course, but he was limited in scope. The contract he’d made with her in his youth prevented him from hurting her, and with her at a higher realm than him, it meant he could not effectively oppose her. 
 
 But now, the reason he could… 
 
