edit secret keepers symbols

--- a/src/collections/proof-of-existence/34.md
+++ b/src/collections/proof-of-existence/34.md
@@ -5,7 +5,7 @@ chapter: 34
 tags: ["veric", "luka", "roxana", "tiziri", "professor raoul"]
 lastEdit: 2025-10-18
 pubDate: 2025-10-18
-authorsNotes: <p>Congrats to everyone who guessed Professor Raoul for the next POV chapter! As a reminder, Professor Raoul teaches rituals & formations. Since his World Proof can conjure any night sky he remembers, and [Storyteller] lets him enact the symbolic power of the stars, he can carry out any star-based ritual or invoke a star's power whenever he wants. This lets him hit way harder above his realm than anyone normally should.</p> <p>This chapter explicitly outlines some of the Tripartite's lore. While I wouldn't call them evil, they aren't exactly benevolent either, so it's not a great idea to get too close to even one of them, much less all three. Really makes you wonder what's going on with Isul, our favorite suspicious priest.</p> <p>Any favorite lore drops this chapter? Guesses on what Acacius plans to do next?</p> <p>As a reminder, due to the comparative length & quality of chapters in this arc, I'll be taking a short hiatus after the arc concludes to stock up chapters again. Thanks for reading, and I hope to see you next week for the final chapter in the arc!</p>
+authorsNotes: <p>Congrats to everyone who guessed Professor Raoul for the next POV chapter! As a reminder, Professor Raoul teaches rituals & formations. Since his World Proof can conjure any night sky he remembers, and [Storyteller] lets him enact the symbolic power of the stars, he can carry out any star-based ritual or invoke a star's power whenever he wants. This lets him hit way harder above his realm than anyone normally should.</p> <p>This chapter explicitly outlines some of the Tripartite's lore. While I wouldn't call them evil, they aren't exactly benevolent either, so it's not a great idea to get too close to even one of them, much less all three. Really makes you wonder what's going on with Isul, our favorite suspicious priest.</p> <p>Any favorite lore drops this chapter? Guesses on what Acacius plans to do next?</p> <p>As a reminder, due to the comparative length & quality of chapters in this arc, I'll be taking a short hiatus after the arc concludes to stock up chapters again. Thanks for reading, and I hope to see you next week for the final chapter in the arc!</p> <p>Minor edit (Oct 19) - forgot to include one of the Secret-Keeper's symbols.</p>
 ---
 
 Raoul had always loved observing the stars. 
@@ -274,7 +274,7 @@ Straightforward.
 
 Acacius’ expression become a little more wary, and Raoul understood, because the things Acacius had revealed today were far too dangerous. 
 
-Although he didn’t mean to pry, he couldn’t help but recall the title tattoos he’d glimpsed earlier. The Secret-Keeper had three primary symbols, and Acacius already had two: the seamless knot over his heart and the ominous black key on his ribcage. He was only missing the dark lantern. 
+Although he didn’t mean to pry, he couldn’t help but recall the title tattoos he’d glimpsed earlier. The Secret-Keeper had four primary symbols, and Acacius already had two: the seamless knot over his heart and the ominous black key on his ribcage. He was only missing the dark lantern and the door.
 
 The Secret-Keeper was clearly not the only member of the Tripartite who had marked him, though. After all, Acacius had that black knife. The power to bestow titles belonged to the Scribe, and the Scribe rarely granted authority in its domain; even their most powerful artifacts and devout followers could not give titles to others. That knife must have been a manifested title or a World Proof touched by the Scribe themself. Yet its power was so transgressive that to use it, Acacius had still needed to invoke the Scribe through all three of their symbols: the serpent, the circle, and the knife. 
 
