--- a/src/collections/proof-of-existence/34.md
+++ b/src/collections/proof-of-existence/34.md
@@ -3,7 +3,7 @@ title: "Lone Astrologer's Record (1)"
 arc: 3
 chapter: 34
 tags: ["veric", "luka", "roxana", "tiziri", "professor raoul"]
-lastEdit: 2025-10-18
+lastEdit: 2025-10-19
 pubDate: 2025-10-18
 authorsNotes: <p>Congrats to everyone who guessed Professor Raoul for the next POV chapter! As a reminder, Professor Raoul teaches rituals & formations. Since his World Proof can conjure any night sky he remembers, and [Storyteller] lets him enact the symbolic power of the stars, he can carry out any star-based ritual or invoke a star's power whenever he wants. This lets him hit way harder above his realm than anyone normally should.</p> <p>This chapter explicitly outlines some of the Tripartite's lore. While I wouldn't call them evil, they aren't exactly benevolent either, so it's not a great idea to get too close to even one of them, much less all three. Really makes you wonder what's going on with Isul, our favorite suspicious priest.</p> <p>Any favorite lore drops this chapter? Guesses on what Acacius plans to do next?</p> <p>As a reminder, due to the comparative length & quality of chapters in this arc, I'll be taking a short hiatus after the arc concludes to stock up chapters again. Thanks for reading, and I hope to see you next week for the final chapter in the arc!</p> <p>Minor edit (Oct 19) - forgot to include one of the Secret-Keeper's symbols.</p>
 ---
@@ -32,7 +32,7 @@ Raoul held out his World Proof, and the astrolabe spun.
 
 `[Observer of All Hidden Skies]`.
 
-The horizon line etched on astrolabe’s plate shifted. The rete rotated around the pin, its pointers shifting to indicate a new configuration of stars, and the metal rule on the other side of the plate spun to match. 
+The horizon line etched on the astrolabe’s plate shifted. The rete rotated around the pin, its pointers shifting to indicate a new configuration of stars, and the metal rule on the other side of the plate spun to match. 
 
 Saivanad Empire, November, 11pm.  
 
@@ -192,9 +192,9 @@ Reading the time, it was clear that too much time had passed since Tiziri sealed
 
 “What happened after we rendezvoused at the Cagzol Institute?” he asked. 
 
-His students gave him a stumbling account of everything that had been transpired. Roxana was the smoothest and most cohesive, giving a lively storyteller’s account; however, she was missing part of the story, which had to be filled in by the others. 
+His students gave him a stumbling account of everything that had transpired. Roxana was the smoothest and most cohesive, giving a lively storyteller’s account; however, she was missing part of the story, which had to be filled in by the others. 
 
-In summary, the situation was thus: during free exploration time, Acacius had realized something amiss and gathered information. He’d given warning to the guided tour, likely forcing the Order’s hand into launching an early attack. During battle, the waters flooded, and the caverns collapsed. After that, Acacius had gathered the others to investigate the Order and their purpose. In the process, they’d discovered that Ozias was a member of the Order, and that Tiziri had made a deal to cooperate with him. Through a truly perilous process, they retrieved his contract card from her hands. 
+In summary, the situation was thus: during free exploration time, Acacius had realized something was amiss and gathered information. He’d given warning to the guided tour, likely forcing the Order’s hand into launching an early attack. During battle, the waters flooded, and the caverns collapsed. After that, Acacius had gathered the others to investigate the Order and their purpose. In the process, they’d discovered that Ozias was a member of the Order, and that Tiziri had made a deal to cooperate with him. Through a truly perilous process, they retrieved his contract card from her hands. 
 
 With the Broken Kaleidoscope gutted and the pre-built ritual exits to the Fantasm destroyed, Raoul was perhaps the only remaining leadership they had. 
 
